--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Martel+Sans:wght@300;400;700&family=Poppins:wght@300;600&display=swap");
 
 .container {
-  width: 1480px;
+  max-width: 1480px;
   padding: 0 20px;
   margin: 0 auto;
 }
